--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/accordion-info-general-gog/accordion-info-general-gog.component.html
@@ -9,7 +9,6 @@
             <mat-card class="shipping-card var-main-gris" style="margin-top: 3em;">
                 <mat-card-content style="text-align: left;">
                     <p><strong>Código SIFI:</strong> 357233</p>
-                    <p><strong>Coordinación responsable:</strong> Andina</p>
                     <div *ngIf="solicitudPago.tipoSolicitudCodigo !== listaTipoSolicitud.expensas && solicitudPago.tipoSolicitudCodigo !== listaTipoSolicitud.otrosCostos">
                         <p><strong>Tipo de contrato:</strong> {{ getTipoSolicitudContrato( solicitudPago.tipoSolicitudCodigo ) }} </p>
                         <p><strong>Valor de la factura:</strong> {{ valorTotalFactura | currency:'':'symbol-narrow':'.0-0' }} </p>
@@ -34,7 +33,13 @@
                     Datos DDP y DRP
                 </mat-panel-title>
             </mat-expansion-panel-header>
-            <div class="table-responsive">
+
+            <div class="d-flex justify-content-center colorMainColor mt-1em">
+                <p>Número de DDP: <b> {{ solicitudPago.contratoSon.contratacion.disponibilidadPresupuestal[ 0 ].numeroDdp }} </b></p>
+                <p style="margin-left: 2em;">Valor del DDP: <b> {{ solicitudPago.contratoSon.contratacion.disponibilidadPresupuestal[ 0 ].valorSolicitud | currency:'':'symbol-narrow':'.0-0' }} </b></p>
+            </div>
+
+            <div class="table-responsive mt-1em">
                 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                     <ng-container matColumnDef="drp">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
@@ -42,15 +47,15 @@
                     </ng-container>
                     <ng-container matColumnDef="numeroDrp">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                        <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp | json }} </td>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDRP }} </td>
                     </ng-container>
                     <ng-container matColumnDef="valorSolicitudDdp">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                        <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
                     </ng-container>
                     <ng-container matColumnDef="saldoPresupuestal">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual DRP</th>
-                        <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
+                        <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
                     </ng-container>
                     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
