--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/informacion-general/informacion-general.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/informacion-general/informacion-general.component.html
@@ -9,8 +9,6 @@
         <mat-card class="shipping-card border">
             <mat-card-content align="left">
                 <p><b>Código SIFI:</b> <i>357233</i></p>
-                <p><b>Coordinación responsable:</b> <i>Andina</i></p>
-                <p><b>Grupo de contrato:</b> <i>Grupo 1</i></p>
                 <p *ngIf="esExpensas === true"><b>Tipo de intervención:</b> <i>Mejoramiento</i></p>
                 <p *ngIf="esExpensas === false"><b>Tipo de contrato:</b> <i> {{ getTipoSolicitudContrato( solicitudPago.tipoSolicitudCodigo ) }} </i></p>
                 <p><b>Valor de la factura:</b> <i> {{ valorTotalFactura | currency:'':'symbol-narrow':'.0-0' }} </i></p>
@@ -36,19 +34,19 @@
             <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" style="width: 40%;">
                 <ng-container matColumnDef="drp">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> DRP </th>
-                    <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{ i + 1 }}</b> </td>
+                    <td mat-cell *matCellDef="let element; index as i" align="center"> <b> {{ i + 1 }} </b> </td>
                 </ng-container>
-                <ng-container matColumnDef="numDrp">
+                <ng-container matColumnDef="numeroDrp">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Número DRP </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDrp }} </td>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.numeroDRP }} </td>
                 </ng-container>
-                <ng-container matColumnDef="valor">
+                <ng-container matColumnDef="valorSolicitudDdp">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ element.valorSolicitudDdp | currency:'':'symbol-narrow':'.0-0' }} </td>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.valor }} </td>
                 </ng-container>
-                <ng-container matColumnDef="saldo">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo </th>
-                    <td mat-cell *matCellDef="let element" align="center"> {{ element.saldoPresupuestal | currency:'':'symbol-narrow':'.0-0' }} </td>
+                <ng-container matColumnDef="saldoPresupuestal">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Saldo actual DRP</th>
+                    <td mat-cell *matCellDef="let element" align="center"> {{ element.saldo }} </td>
                 </ng-container>
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
