debug PQT4 V1 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/dialog-devolver-sol-pago-gog/dialog-devolver-sol-pago-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/dialog-devolver-sol-pago-gog/dialog-devolver-sol-pago-gog.component.html
@@ -4,11 +4,11 @@
 <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
     <div style="padding: 0px 20px; text-align: center;">
         <h1 class="title-menu--h1 centerTrick">
-            Devolver Solicitud de Pago {{ registro.numeroSolicitudPago }}
+            Devolver Solicitud de Pago {{ registro.registro.numeroSolicitudPago }}
         </h1>
         <p class="info-sub-title">
-            <span>Modalidad de contrato: <b> {{ registro.modalidad }} </b></span>
-            <span>Número de contrato: <b> {{ registro.numeroContrato }} </b></span>
+            <span>Modalidad de contrato: <b> {{ registro.registro.modalidad }} </b></span>
+            <span>Número de contrato: <b> {{ registro.registro.numeroContrato }} </b></span>
         </p>
     </div>
     <div class="d-flex align-items-center mt-2em">
