--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -387,7 +387,7 @@
                                 <mat-card-content>
                                     <p style="margin-left: 2em;"><b> {{ descuento.get( 'obsTramitar' ).value.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
                                     <p style="margin-left: 2em;" *ngIf="descuento.get( 'obsTramitar' ).value.tieneObservacion === true"><b>¿Desde la fiduciaria tiene observaciones al descuento {{ i + 1 }}?</b>: Si</p>
-                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'obsTramitar' ).value.tieneObservacion === true"><b>¿Desde la fiduciaria tiene observaciones al descuento {{ i + 1 }}?</b>: No</p>
+                                    <p style="margin-left: 2em;" *ngIf="descuento.get( 'obsTramitar' ).value.tieneObservacion === false"><b>¿Desde la fiduciaria tiene observaciones al descuento {{ i + 1 }}?</b>: No</p>
                                     <section [innerHTML]="descuento.get( 'obsTramitar' ).value.observacion" style="margin-left: 2em;" *ngIf="descuento.get( 'obsTramitar' ).value.tieneObservacion === true"></section>
                                 </mat-card-content>
                             </mat-card>
