--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-tercero-giro-gog/form-tercero-giro-gog.component.html
@@ -346,7 +346,7 @@
                 <mat-card-content>
                     <p style="margin-left: 2em;"><b> {{ obsTramitar.fechaCreacion | date: 'dd/MM/yyyy' }} </b></p>
                     <p style="margin-left: 2em;" *ngIf="obsTramitar.tieneObservacion === true"><b>¿Desde la fiduciaria tiene observaciones al tercero de giro?</b>: Si</p>
-                    <p style="margin-left: 2em;" *ngIf="obsTramitar.tieneObservacion === true"><b>¿Desde la fiduciaria tiene observaciones al tercero de giro?</b>: No</p>
+                    <p style="margin-left: 2em;" *ngIf="obsTramitar.tieneObservacion === false"><b>¿Desde la fiduciaria tiene observaciones al tercero de giro?</b>: No</p>
                     <section [innerHTML]="obsTramitar.observacion" style="margin-left: 2em;" *ngIf="obsTramitar.tieneObservacion === true"></section>
                 </mat-card-content>
             </mat-card>
