--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-detll-fact-proc-asociados/obs-detll-fact-proc-asociados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-detll-fact-proc-asociados/obs-detll-fact-proc-asociados.component.html
@@ -32,9 +32,9 @@
 
     <ng-container *ngIf="esMultiProyecto === true; else noEsMultiProyecto">
         <form [formGroup]="addressForm" (ngSubmit)="onSubmit()">
-            <div formArrayName="projects" style="margin-top: 3em;" *ngIf="projects.length > 0">
-                <div *ngFor="let project of projects.controls; index as i" [formGroup]="project">
-                    <mat-card class="shipping-card var-main-gris">
+            <div style="margin-top: 3em;" *ngIf="projects.length > 0">
+                <div *ngFor="let project of projects.controls; index as i">
+                    <mat-card *ngIf="project.get( 'check' ).value === true" class="shipping-card var-main-gris" [formGroup]="project">
                         <mat-card-header class="header-card header-card--margin">
                             <mat-card-title class="header-card--text">
                                 {{ project.get( 'llaveMen' ).value }}
@@ -47,21 +47,14 @@
                             <br>
                             <div class="d-flex">
                                 <strong>Criterios:</strong>
-                                <div class="d-flex">
-                                    <strong>Criterios:</strong>
-                                    <p *ngFor="let criterio of project.get( 'criterioPago' ).value; index as i" style="margin-left: .4em;"> {{ criterio.nombre }}<span *ngIf="project.get( 'criterioPago' ).value.length - 1 !== i">,</span><span *ngIf="project.get( 'criterioPago' ).value.length - 1 === i">.</span> </p>
-                                </div>
+                                <p *ngFor="let criterio of project.get( 'criterioPago' ).value; index as i" style="margin-left: .4em;"> {{ criterio.nombre }}<span *ngIf="project.get( 'criterioPago' ).value.length - 1 !== i">,</span><span *ngIf="project.get( 'criterioPago' ).value.length - 1 === i">.</span> </p>
                             </div>
-                            <section formArrayName="criteriosProyecto" class="mt-1em"
-                                *ngIf="criteriosProyecto( i ).length > 0">
-                                <div *ngFor="let criterioProyecto of criteriosProyecto( i ).controls; index as j"
-                                    [formGroup]="criterioProyecto">
-                                    <div style="font-size: 16px;">
+                            <section formArrayName="criteriosProyecto" *ngIf="criteriosProyecto( i ).length > 0">
+                                <div  class="mt-1em" *ngFor="let criterioProyecto of criteriosProyecto( i ).controls; index as j" [formGroup]="criterioProyecto">
+                                    <h2>
                                         <b> {{ criterioProyecto.get( 'nombre' ).value }} </b>
-                                    </div>
-                                    <p><strong>Valor facturado para el proyecto en el criterio:</strong> ${{
-                                        criterioProyecto.get( 'valorFacturado' ).value | currency:'
-                                        ':'symbol-narrow':'.0-0' }} </p>
+                                    </h2>
+                                    <p><strong>Valor facturado para el proyecto en el criterio:</strong> ${{ criterioProyecto.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                                 </div>
                             </section>
                         </mat-card-content>
