--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-datos-ddp-gog/tabla-datos-ddp-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-datos-ddp-gog/tabla-datos-ddp-gog.component.html
@@ -2,37 +2,46 @@
     <table mat-table [dataSource]="dataSource" matSort style="width: 90%">
   
         <ng-container matColumnDef="uso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Uso </th>
-          <td mat-cell *matCellDef="let element; index as i" align="center"> <b>{{element.uso}}</b> </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 28%;"> Uso </th>
+          <td mat-cell *matCellDef="let element; index as i" align="center"> {{ element.nombreUso }} </td>
         </ng-container>
-  
+
+        <ng-container matColumnDef="fuente">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Fuente </th>
+            <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+              <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"  *ngFor="let el of element.fuentes ; let i = index">
+                  {{ el.nombreFuente }}
+              </div>
+            </td>
+          </ng-container>
+
         <ng-container matColumnDef="aportante">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Aportante </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Aportante </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"  *ngFor="let el of element.aportante ; let i = index">
-                {{el.nombre }}
+                {{ el.nombreAportante }}
             </div>
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="valorUso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Valor de Uso </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 15%;"> Valor de Uso </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text"  *ngFor="let el of element.valorUso ; let i = index">
-                {{el.valor }}
+                ${{ el.valor }}
             </div>
           </td>
         </ng-container>
-  
+
         <ng-container matColumnDef="saldoActualUso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Saldo actual de uso </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%;"> Saldo actual de uso </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
             <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let el of element.saldoActualUso ; let i = index">
-                {{el.valor }}
+                ${{ el.valor }}
             </div>
           </td>
         </ng-container>
-    
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
