--- a/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tabla-aportantes/tabla-aportantes.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/tramitar-orden-giro/components/tabla-aportantes/tabla-aportantes.component.html
@@ -2,33 +2,42 @@
     <table mat-table [dataSource]="dataSource" matSort>
   
         <ng-container matColumnDef="uso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Uso </th>
-          <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.uso }}</b> </td>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 28%;"> Uso </th>
+          <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreUso }} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="fuente">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Fuente </th>
+          <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let fuente of element.fuentes">
+              {{ fuente.nombreFuente }}
+            </div>
+          </td>
         </ng-container>
   
         <ng-container matColumnDef="aportante">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Aportante </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 20%;"> Aportante </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let aportante of element.aportantes">
-              {{ aportante.nombre }}
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let aportante of element.aportante">
+              {{ aportante.nombreAportante }}
             </div>
           </td>
         </ng-container>
   
         <ng-container matColumnDef="valorUso">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color"> Valor de uso </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="back-color" style="width: 15%;"> Valor de uso </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let aportante of element.aportantes">
-              {{ aportante.valorUso | currency: '': 'symbol-narrow':'.0-0' }}
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let valorUso of element.valorUso">
+              ${{ valorUso.valor }}
             </div>
           </td>
         </ng-container>
   
         <ng-container matColumnDef="saldoActual">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color"> Saldo actual de uso </th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header class="w-20 back-color" style="width: 28%;"> Saldo actual de uso </th>
           <td mat-cell *matCellDef="let element" align="center" class="color-text" class="padding-0em border-color-detalle">
-            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let aportante of element.aportantes">
-              {{ aportante.saldoActualUso | currency: '': 'symbol-narrow':'.0-0' }}
+            <div class="sub-item-table flex-table justify-content-center align-items-center h-3em color-text" *ngFor="let saldoActualUso of element.saldoActualUso">
+              ${{ saldoActualUso.valor }}
             </div>
           </td>
         </ng-container>
