--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/cargar-acta-suscrita-acta-ini-f-i-prc/cargar-acta-suscrita-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/cargar-acta-suscrita-acta-ini-f-i-prc/cargar-acta-suscrita-acta-ini-f-i-prc.component.html
@@ -102,7 +102,7 @@
             id="file"
             formControlName="documentoFile"
           />
-          <span class="required-form-group m-0">*</span>
+          <span class="required-form-group m-0" style="margin-left: 1em !important;">*</span>
         </div>
         <p>
           Explore en su computador o dispositivo y seleccione el documento que desea cargar los formatos permitidos son:
