--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-acta-inicio-f-uno-prc/components/ver-detalle-editar-acta-ini-f-i-prc/ver-detalle-editar-acta-ini-f-i-prc.component.html
@@ -218,7 +218,7 @@
                       max="99"
                       required
                       (keypress)="number($event)"
-                      (ngModelChange)="getValueMeses( $event )"
+                      (ngModelChange)="getValueMeses($event); getMonth( $event )"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
@@ -265,9 +265,10 @@
                       matInput
                       maxlength="2"
                       min="1"
-                      max="31"
+                      max="99"
                       required
                       (keypress)="number($event)"
+                      (ngModelChange)="getDays( $event )"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;if(this.value>=this.max) return false;"
                       oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       type="number"
