--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/datos-factura-construccion-rvrp/datos-factura-construccion-rvrp.component.html
@@ -63,9 +63,15 @@
               </div>
               <div class="col d-flex align-items-center">
                 <mat-form-field class="example-full-width">
-                  <input matInput formControlName="fechaFactura" [matDatepicker]="pickerPoliza" readonly
-                    (click)="pickerPoliza.open()" required placeholder="DD/MM/AAAA">
-                  <mat-datepicker #pickerPoliza></mat-datepicker>
+                  <input  matInput
+                          formControlName="fechaFactura"
+                          [matDatepicker]="pickerPoliza"
+                          readonly
+                          (click)="pickerPoliza.open()"
+                          required
+                          [min]="minDate"
+                          placeholder="DD/MM/AAAA">
+                          <mat-datepicker #pickerPoliza></mat-datepicker>
                 </mat-form-field>
                 <button mat-button color="primary" type="button" (click)="pickerPoliza.open()" class="btn-calendario">
                   <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
