--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-valid-listachequeo/obs-valid-listachequeo.component.scss
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitudes-pago/components/obs-valid-listachequeo/obs-valid-listachequeo.component.scss
@@ -4,6 +4,10 @@
     color: var(--mainColor);
     font-weight: 400;
 }
+.h-modal {
+  overflow: auto;
+  height: 3em;
+}
 .info-sub-title, .mat-typography .info-sub-title {
     margin-top: .8em;
     margin-bottom: 1.2em;
