--- a/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-valid-listachequeo/obs-valid-listachequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/autorizar-solicitud-pago/components/obs-valid-listachequeo/obs-valid-listachequeo.component.html
@@ -15,7 +15,11 @@
                     </ng-container>
                     <ng-container matColumnDef="documento">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Documento </th>
-                        <td mat-cell *matCellDef="let element" align="left"  class="detalle"> <span class="supportBlack">{{ element.listaChequeoItem.nombre }}</span> </td>
+                        <td mat-cell *matCellDef="let element" align="left"  class="detalle">
+                            <div class="h-modal scroll">
+                                <span class="supportBlack">{{ element.listaChequeoItem.nombre }}</span>
+                            </div>
+                        </td>
                     </ng-container>
                     <ng-container matColumnDef="revTecnica">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header class="detalle"> Revisión técnica </th>
