Lista de chequeo - informe final

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-informe-final-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -22,7 +22,7 @@
         <ng-container matColumnDef="informeFinalListaChequeoId">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
           <td mat-cell *matCellDef="let element">
-            <b>{{ element.informeFinalListaChequeoId }}</b>
+            <b>{{ element.posicion }}</b>
           </td>
         </ng-container>
 
