--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-cumplimiento-informe-final-proyecto/components/tabla-detalle-informe-final-anexos/tabla-detalle-informe-final-anexos.component.html
@@ -18,7 +18,7 @@
               <ng-container matColumnDef="No">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
                 <td mat-cell *matCellDef="let element">
-                  <b>{{ element.informeFinalListaChequeo.posicion }}</b>
+                  <b>{{ element.informeFinalListaChequeo.orden }}</b>
                 </td>
               </ng-container>
 
@@ -26,7 +26,7 @@
               <ng-container matColumnDef="item">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>Ítem</th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.informeFinalListaChequeo.nombre }}
+                  {{ element.informeFinalListaChequeo.listaChequeoItem.nombre }}
                 </td>
               </ng-container>
 
