--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-informe-del-proyecto/components/tabla-detalle-informe-anexos/tabla-detalle-informe-anexos.component.html
@@ -15,7 +15,7 @@
                   No.
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  <b>{{ element.informeFinalListaChequeo.posicion }}</b>
+                  <b>{{ element.informeFinalListaChequeo.orden }}</b>
                 </td>
               </ng-container>
 
@@ -25,7 +25,7 @@
                   Ítem
                 </th>
                 <td mat-cell *matCellDef="let element">
-                  {{ element.informeFinalListaChequeo.nombre }}
+                  {{ element.informeFinalListaChequeo.listaChequeoItem.nombre }}
                 </td>
               </ng-container>
 
