--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-detalle/tabla-detalle.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-informe-final-proyecto/components/tabla-detalle/tabla-detalle.component.html
@@ -7,7 +7,7 @@
         <ng-container matColumnDef="No">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
           <td mat-cell *matCellDef="let element">
-            <b>{{ element.informeFinalListaChequeo.posicion }}</b>
+            <b>{{ element.informeFinalListaChequeo.orden }}</b>
           </td>
         </ng-container>
   
@@ -15,7 +15,7 @@
         <ng-container matColumnDef="item">
           <th mat-header-cell *matHeaderCellDef mat-sort-header>Ítem</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.informeFinalListaChequeo.nombre }}
+            {{ element.informeFinalListaChequeo.listaChequeoItem.nombre }}
           </td>
         </ng-container>
   
