Fixes front 3.1.13 solicitados por Ivhon

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/gestionar-acta-inicio-fdos-constr/gestionar-acta-inicio-fdos-constr.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/gestionar-acta-inicio-fdos-constr/gestionar-acta-inicio-fdos-constr.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Gestionar acta de inicio para fase 2 - Construcción
+        Generar acta de inicio para fase 2 - Construcción
     </h1>
     <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
 
@@ -27,7 +27,7 @@
         </a>
     </div>
     <h1 class="title-menu--h1">
-        Gestionar acta de inicio para fase 2 - Construcción
+        Generar acta de inicio para fase 2 - Construcción
     </h1>
     <button mat-mini-fab color="primary" class="btn-info" (click)="verAyuda = !verAyuda">?</button>
     <div class="text-info" *ngIf="verAyuda">
