--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/tabla-general-acta-fdos-const/tabla-general-acta-fdos-const.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acta-inicio-fdos-constr/components/tabla-general-acta-fdos-const/tabla-general-acta-fdos-const.component.html
@@ -62,7 +62,7 @@
                     <button mat-raised-button color="accent" 
                                                             class="btn-table" 
                                                             (click)="this.cargarActaSuscrita(element.contratoId,element.tipoContrato,element.numeroContratoObra)"
-                                                            > 
+                                                            *ngIf="element.estadoActa=='Con acta en proceso de firma' && element.tipoContrato=='Obra'"> 
                     Cargar acta suscrita
                     </button>
 
